<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartHome</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Login Screen -->
    <string name="ls_name">Hey there!</string>
    <string name="ls_welcome">Welcome home.</string>
    <string name="ls_pleaseLogin">Please login.</string>
    <string name="ls_enterPassword">Please enter your password.</string>
    <string name="ls_b_login">Log in</string>

    <!-- Activity List -->
    <string name="al_name">Home Activities</string>
    <string name="al_welcome">Welcome home.</string>
    <string name="al_choose">Choose an activity to start&#8230; </string>

    <!-- Administration screen -->
    <string name="as_name">Administration</string>
    <string name="as_b_getUsers">Get users</string>
    <string name="as_b_addUser">Add a user</string>

    <!-- Administration modify dialog -->
    <string name="adm_instructions">User management</string>
    <string name="adm_modify">Modify</string>
    <string name="adm_ok">OK</string>
    <string name="adm_cancel">Cancel</string>
    <string name="adm_remove">Remove</string>

    <!-- Debugging screen -->
    <string name="ds_name">Debugging</string>
    <string name="ds_b_send">send</string>
    <string name="ds_text">Message to send&#8230;</string>

    <!-- Door screen -->
    <string name="ds_main_name">Door Access</string>
    <string name="ds_main_b_open">Open</string>
    <string name="ds_main_cb_change">Change password after login.</string>
    <string name="ds_main_tv_welcome">&#8230;A door is blocking your way&#8230;</string>
    <string name="ds_main_tv_instruction">Please enter code to open door&#8230;</string>

    <!-- Door Administration screen -->
    <string name="ds_admin_name">Door Mastery</string>
    <string name="ds_admin_b_change">Save new password</string>
    <string name="ds_admin_cb_show">Show password</string>
    <string name="ds_admin_tv_welcome">Welcome door master</string>
    <string name="ds_admin_tv_instruction">You may change the password for the door.&#8230;</string>
    <string name="ds_admin_tv_old">Old password:</string>
    <string name="ds_admin_tv_new">New password:</string>
    <string name="ds_admin_tv_confirm">Confirm password:</string>

    <!-- Heating Main Activity -->
    <string name="hm_name">Heating Management</string>
    <string name="scheduling">Heating Scheduling</string>
    <string name="thresholds">Thresholds Heat and Light</string>
    <string name="history">History</string>
    <string name="Exit">Exit</string>

    <!-- Heating Thresholds -->
    <string name="ht_name">Thresholds</string>
    <string name="luminostiy">Luminosity</string>
    <string name="temperature">Temperature</string>
    <string name="heating">HEATING</string>
    <string name="default_temperature">Default Temperature</string>
    <string name="light_below">Turn on below</string>
    <string name="light_above">Turn off above</string>
    <string name="save_thresholds">Save Thresholds</string>
    <string name="save_before_quit">Would you like to save Thresholds before leaving ?</string>
    <string name="yes">Yes</string>
    <string name="no_quit">No, let me quit</string>

    <!-- Heating Scheduling -->
    <string name="schedulings">Schedulings</string>
    <string name="hs_name">Scheduling</string>
    <string name="add">Add</string>
    <string name="delete_selection">Delete Selection</string>
    <string name="item_temp">T°</string>
    <string name="item_temperature">Temperature</string>
    <string name="item_date">Date</string>
    <string name="item_name">Name</string>
    <string name="start">Start</string>
    <string name="end">End</string>

    <!-- Heating History -->
    <string name="hh_name">History</string>
    <string name="show_graphical_view">Show graphical view</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>

    <!-- Add note screen -->
    <string name="an_name">New Post-it</string>
    <string name="nm_name">Note Menu</string>
    <string name="title_activity_ajouter_note">Add post-it</string>
    <string name="sujet">Subject :</string>
    <string name="detail">Details :</string>
    <string name="destinataire">To :</string>
    <string name="NoteAdd">Add</string>
    <string name="title_activity_note">Post-it</string>
    <string name="title_activity_note_menu">Post-it menu</string>
    
    
    <!-- View and delete note screen -->
    <string name="dn_name">Note viewer</string>
    <string name="anm_check">Check them out</string>
    <string name="anm_add">Write a post-it</string>
    <string name="anm_instr">What do you want to do?</string>
    <string name="anm_welcome">Hey there!\nWelcome to your post-it management.</string>


    <!-- Options Menu -->
    <string name="base_connect">Connect a device - Base</string>
    <string name="debugger">Debugger</string>
    <string name="debug_mode_on">Debug mode on</string>
    <string name="debug_mode_off">Debug mode off</string>
    <string name="logging_on">Logs on</string>
    <string name="logging_off">Logs off</string>
    <string name="discoverable">Make discoverable</string>
    <string name="disconnect">Disconnect</string>
    <string name="quit">Quit</string>
    <string name="home">Home</string>

    <!-- Device List Screen -->
    <string name="scanning">Scanning for devices&#8230;</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    
    <!-- Buzzer -->
    <string name="toinfiniteandbeyond">Buzz !</string>

</resources>