<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/thresholdsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/thresholds"
        android:textSize="25sp"
        android:textStyle="italic" />

    <!-- Heating -->

    <TextView
        android:id="@+id/heating_thresholds_txt_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:text="@string/default_temperature"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/heating_thresholds_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="25" />

    <!-- Light -->

    <TextView
        android:id="@+id/heating_thresholds_txt_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:text="@string/light_below"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/heating_thresholds_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100" />

    <TextView
        android:id="@+id/heating_thresholds_txt_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:text="@string/light_above"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/heating_thresholds_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSaveThresholds"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveThresholds"
            android:text="@string/save_thresholds" >
        </Button>
    </LinearLayout>

</LinearLayout>