<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.hearc.smarthome.NoteMenu" >

    <TextView
        android:id="@+id/activity_note_menu_tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/activity_note_menu_instructions"
        android:layout_marginBottom="82dp"
        android:gravity="center_horizontal"
        android:text="@string/anm_welcome"
        style="@style/title"
         />

    <TextView
        android:id="@+id/activity_note_menu_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:text="@string/anm_instr" />

    <Button
        android:id="@+id/SupprimerNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AjouterNote"
        android:layout_centerHorizontal="true"
        android:background="?android:attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_action_read"
        android:drawablePadding="6dp"
        android:onClick="SupprimerNoteActivity"
        android:text="@string/anm_check" />

    <Button
        android:id="@+id/AjouterNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_note_menu_instructions"
        android:layout_centerHorizontal="true"
        android:background="?android:attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_action_edit"
        android:drawablePadding="2dp"
        android:onClick="AjouterNoteActivity"
        android:text="@string/anm_add" />

</RelativeLayout>