<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.hearc.smarthome.AjouterNote" >

    <TextView
        android:id="@+id/txtSujet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sujet"
        android:layout_alignParentLeft="true"
        android:labelFor="@+id/sujet"
        android:text="@string/sujet" />

    <EditText
        android:id="@+id/sujet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtSujet"
        android:ems="10"
        android:inputType="text"
        android:maxLength="8" />

    <TextView
        android:id="@+id/txtDestinataire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/destinataire"
        android:layout_toLeftOf="@+id/destinataire"
        android:labelFor="@+id/destinataire"
        android:text="@string/destinataire" />

    <EditText
        android:id="@+id/destinataire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sujet"
        android:layout_below="@+id/sujet"
        android:ems="10"
        android:inputType="text"
        android:maxLength="8" />

    <EditText
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/destinataire"
        android:layout_below="@+id/destinataire"
        android:ems="10"
        android:inputType="text"
        android:maxLength="128" />

    <TextView
        android:id="@+id/txtDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/detail"
        android:layout_toLeftOf="@+id/detail"
        android:labelFor="@+id/detail"
        android:text="@string/detail" />

    <Button
        android:id="@+id/AddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail"
        android:layout_centerHorizontal="true"
        android:background="?android:attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_action_new_email"
        android:drawablePadding="4dp"
        android:onClick="AddNote"
        android:text="@string/NoteAdd" />

</RelativeLayout>