<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/device_list_tv_paired_devices"
        style="@style/Section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="5dp"
        android:text="@string/title_paired_devices"
        android:textColor="@android:color/black"
        android:visibility="visible" />

    <ListView
        android:id="@+id/device_list_lv_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:animateLayoutChanges="true"
        android:stackFromBottom="false"
        android:transcriptMode="alwaysScroll" />

    <TextView
        android:id="@+id/device_list_tv_new_devices"
        style="@style/Section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/title_other_devices"
        android:textColor="@android:color/black"
        android:visibility="visible" />

    <ListView
        android:id="@+id/device_list_lv_new_devices"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:animateLayoutChanges="true"
        android:stackFromBottom="false"
        android:transcriptMode="alwaysScroll" />

    <Button
        android:id="@+id/device_list_b_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="doDiscovery"
        android:text="@string/button_scan" 
       	style="@style/subtitle"
       	android:textColor="@android:color/black"
        android:drawableLeft="@drawable/ic_action_bluetooth_searching"
        android:background="?android:attr/selectableItemBackground"/>

</LinearLayout>